--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>login</title>
+    <title>login2</title>
     <!-- fontawesome link -->
     <link rel="stylesheet" href="fontawesome/css/all.css" />
     <!-- bootstrap link -->
